--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0",
     "gulp-watch": "^5.0.1",
+    "jest": "^29.7.0",
     "sass": "^1.67.0"
   }
 }
