--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tablebeautifuler",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Welcome to TableBeautifuller, a JavaScript library designed to enhance your HTML tables with advanced features such as pagination, sorting, and searching.",
   "main": "index.js",
   "directories": {
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Fabacks/TableBeautifuler#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
     "gulp-header": "^2.0.9",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
