--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-clone": "^2.0.1",
     "gulp-header": "^2.0.9",
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^2.0.0",
@@ -34,6 +35,7 @@
     "gulp-terser": "^2.1.0",
     "gulp-watch": "^5.0.1",
     "jest": "^29.7.0",
+    "merge-stream": "^2.0.0",
     "sass": "^1.67.0"
   }
 }
