--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-unit": "jest",
+    "test-watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "gulp-terser": "^2.1.0",
     "gulp-watch": "^5.0.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "merge-stream": "^2.0.0",
     "sass": "^1.67.0"
   }
